# CppResult

./: CMakeLists.txt  README.md  checks.json
include/: CPPResult.hpp  Result.hpp
unit_tests/: CMakeLists.txt  ResultTest.cpp
